syntax = "proto3";
package proto;
option go_package = "./proto;proto";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

service Bookstore {
    // 返回书店中所有书架
    rpc ListShelves(google.protobuf.Empty) returns (ListShelvesResponse) {
        option (google.api.http) = {
            get: "/v1/shelves" // HTTP GET 请求映射到 /v1/shelves
        };
    }

    // 创建书架
    rpc CreateShelf(CreateShelfRequest) returns (Shelf) {
        option (google.api.http) = {
            post: "/v1/shelves" // HTTP POST 请求映射到 /v1/shelves
            body: "shelf"       // 请求体中的 JSON 对应 shelf 字段
        };
    }

    // 查询指定书架
    rpc GetShelf(GetShelfRequest) returns (Shelf) {
        option (google.api.http) = {
            get: "/v1/shelves/{shelf}" // GET 请求映射到 /v1/shelves/:id
        };
    }

    // 删除书架
    rpc DeleteShelf(DeleteShelfRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/shelves/{shelf}" // DELETE 请求映射
        };
    }

    // 查询书架里的图书
    rpc ListBooks(ListBooksRequest) returns (ListBooksResponse) {
        option (google.api.http) = {
            get: "/v1/shelves/{shelf}/books"
        };
    }
}

// 数据结构
message Shelf {
    int64 id = 1;
    string theme = 2; // 书架主题
    int64 size = 3;   // 容量
}

message Book {
    int64 id = 1;
    string author = 2;
}

message ListShelvesResponse {
    repeated Shelf shelves = 1; // 书架列表
}

message CreateShelfRequest {
    Shelf shelf = 1; // 创建书架请求
}

message GetShelfRequest {
    int64 shelf = 1; // 请求书架ID
}

message DeleteShelfRequest {
    int64 shelf = 1; // 删除书架ID
}

message ListBooksRequest {
    int64 shelf = 1; // 查询书籍的书架ID
    string page_token=2;
}

message ListBooksResponse {
    repeated Book book = 1; // 返回书籍列表
    string next_page_token=2;
}

message CreateBookRequest{
    int64 shelf=1;
    Book book=2;
}

message GetBookRequest{
    int64 shelf=1;
    int64 book=2;
}